# PayFlow

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/: app.py  config.py  database.py  health.py  logging_config.py  metrics.py  middleware.py  models.py  schemas.py
src/kafka/: consumer.py  outbox_relay.py
src/routes/: payments.py
src/services/: payment.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py  factories.py  test_api.py  test_celery_tasks.py  test_concurrency.py  test_outbox_relay.py  test_payment_service.py
